--- a/resources/sass/_base.scss
+++ b/resources/sass/_base.scss
@@ -2,3 +2,14 @@ body {
   background-color: white;
   width:1000px;
 }
+.non-display {
+  display: none;
+}
+
+.mgr-10 {
+  margin-right: 10px;
+}
+
+.mgl-10 {
+  margin-left: 10px;
+}
